# devito

./: .buildinfo  .codecov.yml  .coverage  .coveragerc  .deploy_key.enc  .doctr-files  .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  2d5pt.py  =1.4  AcousticWave2D-codegen.py  AcousticWave2D.py  AcousticWave2D_codegen.py  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  Dockerfile  Dockerfile.jenkins  Dockerfile.pipelines  FAQ.md  GenerateXDSL.ipynb  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  LAZY-TODO.txt  MANIFEST.in  MFE_elastic.ipynb  MFE_time_size.ipynb  MFE_time_size.txt  Makefile  One_Step_Methods_ODE_Exercises.ipynb  README.md  SeismicData.py  SeismicDataReader.py  SubsurfaceModel2D.py  TODO.md  (+139 more)
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yaml  dependabot.yml  release-drafter.yaml  release-drafter.yml
Devito-FWI-ABC/: main.ipynb  settings_config.py  test_adjoint.py  test_forward.py
PSA/: deployVM.ps1
_modules/: abc.html  builtins.html  cached_property.html  devito.html  index.html  numpy.html
_sources/: builtins.rst.txt  compiler.rst.txt  developer.rst.txt  devito.core.rst.txt  devito.dle.rst.txt  devito.dse.backends.rst.txt  devito.dse.rst.txt  devito.ir.analysis.rst.txt  devito.ir.clusters.rst.txt  devito.ir.iet.rst.txt  devito.ir.rst.txt  devito.ir.support.rst.txt  devito.rst.txt  devito.txt  devito.yask.rst.txt  download.rst.txt  equation.rst.txt  examples.cfd.rst.txt  examples.rst.txt  examples.seismic.acoustic.rst.txt  examples.seismic.rst.txt  examples.seismic.tti.rst.txt  grid.rst.txt  grids.rst.txt  heat.rst.txt  index.rst.txt  precsparsefunction.rst.txt  precsparsetimefunction.rst.txt  tensorfunction.rst.txt  tensortimefunction.rst.txt  tutorials.rst.txt  userapi.rst.txt  vectortimefunction.rst.txt  wave.txt
benchmarking/: README.md
benchmarks/: README.md
binder/: README.md  requirements.txt
devito/: __init__.py  _version.py  algorithms.py  archinfo.py  arguments.py  at_controller.py  autodiff.py  autotuning.py  backends.py  base.py  builtins.py  cgen_utils.py  cgen_wrapper.py  codeprinter.py  compiler.py  data.py  deprecations.py  dimension.py  distributed.py  equation.py  exceptions.py  expression.py  finite_difference.py  flow.py  function.py  function_manager.py  grid.py  interfaces.py  interpolators.py  iteration.py  jit_manager.py  logger.py  memmap_manager.py  memory.py  node.py  nodes.py  operator.py  operators.py  parameters.py  pointdata.py  (+13 more)
devito_to_xdsl_examples/: ietxdsl_example_u_and_v.py  ietxdsl_example_u_dx.py  ietxdsl_example_u_plus_1.py  simple_example_ietxdsl.py
docker/: Dockerfile  Dockerfile.amd  Dockerfile.cpu  Dockerfile.devito  Dockerfile.intel  Dockerfile.intelhpc  Dockerfile.nogil  Dockerfile.nvidia  Dockerfile.nvidia.clang  Dockerfile.nvidia.nvc  Dockerfile.petsc  README.md  Singularity.nvidia.def  coverage.env  entrypoint.sh  nvdashboard.json  run-jupyter.sh  run-jupyterlab.sh  run-print-defaults.sh  run-tests.sh  third-party-programs.txt
docs/: Makefile  compiler.rst  conf.py  deploy.sh  deploy_key.enc  devito.rst  download.rst  finite-difference.rst  heat.rst  index.rst  make.bat  tutorials.rst  userapi.rst  userdoc.rst  wave.rst
examples/: .ruff.toml  AcousticWave2D.py  AcousticWave2D_codegen.py  Acoustic_codegen.py  At_benchmark.py  PERFORMANCE.md  README.md  TTI_codegen.py  acoustic_example.py  at_benchmark.py  auto_tune_example.py  bench_time.py  bench_time_advisor.py  benchmark.py  containers.py  example_diffusion.py  fwi_operators.py  launcher.sh  loops_t_ws.py  operators.py  source_type.py  test_pgcc.py  testtt.py  tti_Marmou3D_TTI.py  tti_benchmark.py  tti_example.py  tti_example2D.py  tti_operators.py
fast/: -  .gitignore  2d5pt.py  2d5pt_bench_grid_size.csv  2d5pt_gpu_grid_runtimes.csv  2d5pt_grid_runtimes.csv  2d5pt_threads_devito.csv  2d5pt_threads_xdsl.csv  3d_diff.py  3d_diff_grid_runtimes.csv  Dockerfile-SC  Makefile  README.md  auto_benchmark.py  bench_utils.py  benchmarks.py  compare.py  diffusion_2D_wBCs.py  diffusion_3D_wBCs.py  elastic_2d.py  fast_benchmarks.py  gpu.sh  grid_scale.py  interop.c  job-devito-xdsl.slurm  logging.patch  mfe_2D.py  mpi.sh  nd_nwave_devito_nodamp.py  nd_wave_devito_nodamp.py  openmp.sh  plot.py  plot_grid_scale.py  plot_thread.py  run_benchmark.py  runner.py  setup.sh  setup_wave2d.py  setup_wave3d.py  single_thread.sh  (+8 more)
paper-dispersion-reduction/: LICENSE.md  README.md  coef_opt.py  devito_acustica.py  devito_acustica_gera.py  gera_files.py  macustica.py  plots_analise_grupo_fields.py  plots_analise_grupo_new.py  plots_analise_grupo_normas.py  rotinas_plot.py  testes_opt.py
paper-fwi/: README.md  adjoint.py  forward.py  fwi.py  gera_true_rec.py  main.ipynb  run_tests.py  settings_config.py
samples/: AcousticWave2D_codegen.py  benchmark.py
scripts/: advisor.py  clean_notebooks.sh  clear_devito_cache.py  create_ipyparallel_mpi_profile.sh  demonstrate_fix.py  gen_sympy_funcs.py  run_advisor.py  set_omp_pinning.sh  typos_json_to_gha.py
silva-peixoto-comp-geo-paper/: README.md  devito_acustica.py  devito_acustica_gera.py  gera_files_new.py  rotinas_plot.py  teste_cfl.py  testes_opt.py
slow-count-performance/: DevitoRK.py  callingGraph.dot  myLog.profile
source/: index.rst  timefunction.rst  tutorials.rst
templates/: basic_template.py  includes.py
tests/: conftest.py  demo.py  jrt-bug.py  mfe1332.py  mfe_1d.py  proto.c  skew.py  skew2.py  test_adjoint.py  test_adjointA.py  test_adjointJ.py  test_adjoints.py  test_arch.py  test_auto_tuning.py  test_autodiff.py  test_autotuner.py  test_benchmark.py  test_buffering.py  test_builtins.py  test_cache_blocking.py  test_caching.py  test_checkpointing.py  test_cinterface.py  test_constant.py  test_cse.py  test_custom_coefficients.py  test_data.py  test_data_parallel.py  test_declarator.py  test_dependency_bugs.py  test_derivatives.py  test_differentiable.py  test_diffusion.py  test_dimension.py  test_distributed_engine.py  test_dle.py  test_docstrings.py  test_dse.py  test_dtypes.py  test_environment.py  (+77 more)
xdsl/: devito-opt  devito-opt.py  (+2 more)
(+1949 files in other folders)
